Fix text-align property location in CSS

--- a/app/static/css/theme.css
+++ b/app/static/css/theme.css
@@ -67,7 +67,6 @@ hr.shadow:before {
 /* Simple footer style */
 .content {
     min-height: calc(100vh - 95px);
-    text-align: center;
     padding-top: 5px;
 }
 
@@ -81,7 +80,12 @@ hr.shadow:before {
     padding-left: 20px;
     margin-top: 25px;
 }
+
 .footer-copyright {
     margin-left: auto;
     margin-right: 20px;
+}
+
+.welcome-text {
+    text-align: center;
 }
